Added in styles to my calculator by applying hover effect on the arithmetic and clear buttons. Also event listener where when a user clicks on the buttons, it displays on the calculator. Now trying to figure out how to store the numbers in my operate function.

--- a/index.html
+++ b/index.html
@@ -11,28 +11,29 @@
         <h1>Calculator</h1>
     </div>
     <div id="calculator"> 
-        <div id="calculator-display"></div>
+        <div id="calculator-display">
+        </div>
         <div id="calculator-buttons">
-            <div class="button" id="clear">clear</div>
+            <div class="button" id="clear" data-clear>clear</div>
             <div class="button">.</div>
-            <div class="button">%</div>
-            <div class="button" id="arithmetic">x</div>
-            <div class="button">7</div>
-            <div class="button">8</div>
-            <div class="button">9</div>
-            <div class="button" id="arithmetic">+</div>
-            <div class="button">6</div>
-            <div class="button">5</div> 
-            <div class="button">4</div>
-            <div class="button" id="arithmetic">-</div>
-            <div class="button">3</div>
-            <div class="button">2</div>
-            <div class="button">1</div>
-            <div class="button" id="arithmetic">/</div>
+            <div class="button" data-delete><-</div>
+            <div class="button" id="arithmetic" data-operator>x</div>
+            <div class="button" id="number" data-number>7</div>
+            <div class="button" id="number" data-number>8</div>
+            <div class="button" id="number" data-number>9</div>
+            <div class="button" id="arithmetic" data-operator>+</div>
+            <div class="button" id="number" data-number>6</div>
+            <div class="button" id="number" data-number>5</div> 
+            <div class="button" id="number" data-number>4</div>
+            <div class="button" id="arithmetic" data-operator>-</div>
+            <div class="button" id="number" data-number>3</div>
+            <div class="button" id="number" data-number>2</div>
+            <div class="button" id="number" data-number>1</div>
+            <div class="button" id="arithmetic" data-operator>/</div>
             <div class="button">(</div>
-            <div class="button">0</div>
+            <div class="button" id="number" data-number>0</div>
             <div class="button">)</div>
-            <div class="button">=</div>
+            <div class="button" data-operate>=</div>
         </div>
     </div>
     
