--- a/index.html
+++ b/index.html
@@ -12,28 +12,26 @@
     </div>
     <div id="calculator"> 
         <div id="calculator-display">
+            <div class="previous-operand" data-previous></div>
+            <div class="current-operand" data-current></div>
         </div>
         <div id="calculator-buttons">
-            <div class="button" id="clear" data-clear>clear</div>
-            <div class="button">.</div>
-            <div class="button" data-delete><-</div>
-            <div class="button" id="arithmetic" data-operator>x</div>
-            <div class="button" id="number" data-number>7</div>
-            <div class="button" id="number" data-number>8</div>
-            <div class="button" id="number" data-number>9</div>
-            <div class="button" id="arithmetic" data-operator>+</div>
-            <div class="button" id="number" data-number>6</div>
-            <div class="button" id="number" data-number>5</div> 
-            <div class="button" id="number" data-number>4</div>
-            <div class="button" id="arithmetic" data-operator>-</div>
-            <div class="button" id="number" data-number>3</div>
-            <div class="button" id="number" data-number>2</div>
-            <div class="button" id="number" data-number>1</div>
-            <div class="button" id="arithmetic" data-operator>/</div>
-            <div class="button">(</div>
-            <div class="button" id="number" data-number>0</div>
-            <div class="button">)</div>
-            <div class="button" data-operate>=</div>
+            <button id="clear" data-clear>clear</button>
+            <button id="arithmetic" data-operator>x</button>
+            <button id="number" data-number>7</button>
+            <button id="number" data-number>8</button>
+            <button id="number" data-number>9</button>
+            <button id="arithmetic" data-operator>+</button>
+            <button id="number" data-number>6</button>
+            <button id="number" data-number>5</button> 
+            <button id="number" data-number>4</button>
+            <button id="arithmetic" data-operator>-</button>
+            <button id="number" data-number>3</button>
+            <button id="number" data-number>2</button>
+            <button id="number" data-number>1</button>
+            <button id="arithmetic" data-operator>/</button>
+            <button class="span" id="number" data-number>0</button>
+            <button data-operate>=</button>
         </div>
     </div>
     
